--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,8 @@
-
-
-
+  <h1>Team Name: <%= @team.name%> </h1>
+  <h2>Team Motto: <%= @team.motto%> </h2>
+  <br>
+  <% @members.each do |member|%>
+  <p>Hero Name: <%= member.name %> </p>
+  <p>Hero Power: <%= member.power %> </p>
+  <p>Hero Biography: <%= member.bio %> </p>
+  <% end %>
